# queryrouter-plus-plus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
api/: __init__.py  dependencies.py  main.py  openai_compat.py  schemas.py
config/: __init__.py  librechat.yaml  preferences_schema.json
core/: __init__.py  compatibility_scorer.py  model_registry.py  preference_engine.py  query_featurizer.py  router.py
data/: __init__.py  loaders.py  normalizers.py  utils.py
data_models/: CHANGELOG.md  README.md  models_benchmark_matrix.csv  models_cost_matrix.csv  models_eco_matrix.csv  query_taxonomy.json
notebooks/: exploration.ipynb
queryrouter/: __init__.py
scripts/: evaluate_on_librechat.py
tests/: __init__.py  test_api.py  test_evaluator.py  test_featurizer.py  test_loaders.py  test_normalizers.py  test_openai_compat.py  test_router.py  test_scorer.py  test_utils.py
training/: __init__.py  evaluator.py  trainer.py
