# description: Poetry project configuration for QueryRouter++
# agent: coder
# date: 2026-03-23
# version: 1.0

[tool.poetry]
name = "queryrouter"
version = "0.1.0"
description = "Multi-criteria LLM routing system based on formalized query-model compatibility."
authors = ["QueryRouter++ Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "queryrouter", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.0"
sentence-transformers = "^3.0.0"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
optuna = "^4.0.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
httpx = "^0.28.0"
python-dotenv = "^1.0.0"
rich = "^13.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
black = "^24.10.0"
mypy = "^1.13.0"

[tool.poetry.scripts]
queryrouter = "queryrouter.api.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=queryrouter --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
